--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,39 @@
 {
-  "extends": "next/core-web-vitals"
+  "plugins": [
+      "prettier",
+      "react"
+    ],
+    "extends": [
+      "next/core-web-vitals",
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "rules": {
+      "no-empty-function": "off",
+      "no-empty-pattern": "off",
+      "prettier/prettier": ["error",
+          {
+              "doubleQuote": true,
+              "useTabs": true,
+              "semi": true,
+              "trailingComma": "all",
+              "bracketSpacing": true,
+              "printWidth": 100,
+              "endOfLine": "auto"
+          }
+      ],
+      "@typescript-eslint/no-empty-function": [
+          "off"
+      ],
+      "@typescript-eslint/interface-name-prefix": "off",
+      "@typescript-eslint/explicit-function-return-type": "off",
+      "@typescript-eslint/explicit-module-boundary-types": "off",
+      "@typescript-eslint/no-explicit-any": "off",
+      "@typescript-eslint/no-namespace": "off",
+      "@typescript-eslint/ban-ts-comment": "off",
+      "@typescript-eslint/no-empty-interface": "off",
+      "@typescript-eslint/ban-types": "off",
+      "@typescript-eslint/no-unused-vars": "off"
+    }
 }
+
