--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@types/react-dom": "^18.2.21",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "next": "14.1.0",
     "react": "^18",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "sort-by": "^1.2.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
