--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/storeRedux/*": ["storeRedux/*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/**/.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/**.tsx", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
