--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -72,9 +72,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        shell: bash
+        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }} npm ci
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} npx next build
+        run: ${{ steps.detect-package-manager.outputs.runner }} npm next build
       # - name: Static HTML export with Next.js
       #   run: ${{ steps.detect-package-manager.outputs.runner }} npx  next export
       - name: Upload artifact
