--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -75,7 +75,7 @@ jobs:
         shell: bash
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }} npm ci
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} npm next build
+        run: ${{ steps.detect-package-manager.outputs.runner }} npm run build
       # - name: Static HTML export with Next.js
       #   run: ${{ steps.detect-package-manager.outputs.runner }} npx  next export
       - name: Upload artifact
